Development
    Updated French Translation
    Usage of demuxer is incorrect since that specifies the container and not the codec type
        Rework to use video codec to determine how to accelerate
    Use demuxer to determine codec to use for vdpau vo
    Add demuxer to list of stored information on the playlist
    Add in support vdpau vo when playing dvd 
    Cleanup gmp_tempname a little
    Only use xvmc vo for dvd and dvdnav cases, use xv as a fallback when xvmc should not be used
    Updated Polish translation
    Add hidden preference 'fullscreen' which does the same as the --fullscreen command line option
    Add bobdeint and queue options to xvmc when deinterlace is enabled
    Updated Korean translation
    Add new commandline option --fullscreen that opens the video in fullscreen mode
    Rework how accelerators are called, and remap them on keymap change
    make indent
    Remove eq filter when using xvmc vo
    Disable deinterlace filters when xvmc is enabled
    Added vo of xvmc to the list, the codec is forced to ffmpeg12mc when this option is selected
    Reference cleanups
    Updated Turkish translation
    Fix misplaced ;, was block all art fetches
    Only create cover art cache path, if we are going to download something
    Force refresh of GUI at end of refresh_window
    Fix bug #108, when in shuffle mode, deleted items come back when unshuffled
    Show remote files on recent list when GIO enabled
    Rework cover art loading to minimize calls to musicbrainz
    Updated French translation
    Added the ability to play a DVD from an ISO image
    Safety checks for musicbrains3
    Change cover art cache file when using 'guess' at what we are looking for
    Capture SIGTERM as well
    Shutdown mplayer when we get a SIGHUP (example is when X is forced to quit)
    Allow window decorations when running as a plugin but embedding is disabled
    Use the cache when streaming, a playlist or when forced, otherwise don't