@@ -117,6 +117,7 @@ typedef struct _IdleData {
     gchar info[1024];
     gchar display_name[1024];
     gchar media_info[2048];
+	gchar media_notification[2048];
     gchar url[1024];
     gchar *device;
     gdouble percent;
